Bug 239584 - kspreadsheet:msoffice2003: Filled radar chart is not filled
Summary: kspreadsheet:msoffice2003: Filled radar chart is not filled
Status: VERIFIED FIXED
Alias: None
Product: calligrasheets
Classification: Applications
Component: filter/xls (other bugs)
Version First Reported In: unspecified
Platform: unspecified All
: NOR normal
Target Milestone: ---
Assignee: Ariya Hidayat
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-12-04 10:32 UTC by Lassi Nieminen
Modified: 2011-12-09 11:29 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Test data created in MS Office 2003 (14.50 KB, application/vnd.ms-excel)
2009-12-04 10:32 UTC, Lassi Nieminen
Details
screen shot when viewed in koffice (96.36 KB, image/x-png)
2009-12-04 11:48 UTC, Lassi Nieminen
Details
screen shot when viewed in openoffice (544.61 KB, image/x-png)
2009-12-04 12:10 UTC, Lassi Nieminen
Details
pyodconverter converted testdata (13.22 KB, application/x-zip-compressed)
2010-03-08 08:14 UTC, Lassi Nieminen
Details
koconverter converted testdata (3.21 KB, application/x-zip-compressed)
2010-03-08 08:15 UTC, Lassi Nieminen
Details
koconverter converted testdata opened in openoffice (126.02 KB, image/x-png)
2010-03-08 08:15 UTC, Lassi Nieminen
Details
pyodconverter converted testdata opened in koffice (122.54 KB, image/x-png)
2010-03-08 08:16 UTC, Lassi Nieminen
Details
Screenshot with filled colors. (149.76 KB, image/x-png)
2011-12-09 05:38 UTC, keerthi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Faure 2010-05-28 03:24:33 UTC


---- Reported by lassi.ta.nieminen@nokia.com 2009-12-04 11:32:59 +0200 ----

Created an attachment
Test data created in MS Office 2003

Test data document created in Open office

SOFTWARE VERSION:
  Kubuntu 9.04
  Koffice (svn version 1056240)
  Test document (Open office): me03_filled_radar_chart.xls
HARDWARE VERSION:

PRECONDITIONS:

STEPS LEADING TO PROBLEM: 

  1. Open the attached document in MS excel 2003.
  2. Open the same document in KSpread.
  3. Observe that filled radar chart is not visible
EXPECTED OUTCOME:
Filled radar chart should be visible
ACTUAL OUTCOME:
Filled radar chart is not visible

FREQUENCY OF OCCURRENCE: 
always



---- Additional Comments From lassi.ta.nieminen@nokia.com 2009-12-04 12:48:14 +0200 ----

Created an attachment
screen shot when viewed in koffice



---- Additional Comments From lassi.ta.nieminen@nokia.com 2009-12-04 13:10:38 +0200 ----

Created an attachment
screen shot when viewed in openoffice



---- Additional Comments From lassi.ta.nieminen@nokia.com 2009-12-09 05:40:50 +0200 ----

Koffice SVN  Version is 1056420 not 1056240.



---- Additional Comments From lassi.ta.nieminen@nokia.com 2010-03-08 09:14:51 +0200 ----

Created an attachment
pyodconverter converted testdata



---- Additional Comments From lassi.ta.nieminen@nokia.com 2010-03-08 09:15:09 +0200 ----

Created an attachment
koconverter converted testdata



---- Additional Comments From lassi.ta.nieminen@nokia.com 2010-03-08 09:15:32 +0200 ----

Created an attachment
koconverter converted testdata opened in openoffice



---- Additional Comments From lassi.ta.nieminen@nokia.com 2010-03-08 09:16:27 +0200 ----

Created an attachment
pyodconverter converted testdata opened in koffice

Observation (1096327) : File got corrupted when converted using koconverter and when loaded in open office error message is displayed.

KOffice loaded the OOo-converted document properly, but the chart displayed is incorrect.



---- Additional Comments From lassi.ta.nieminen@nokia.com 2010-04-22 15:22:30 +0300 ----

The filled radar chart is visible with r1117523 now on both, 2003 and 2007. What is still missing is the filling itself cause atm we thread filled radar charts are normal radar charts. Seems filling is not support by KDChart...



--- Bug imported by faure@kde.org 2010-05-28 03:24  ---

This bug was previously known as _bug_ 149460.

Imported an attachment (id=46467)
Imported an attachment (id=46468)
Imported an attachment (id=46469)
Imported an attachment (id=46470)
Imported an attachment (id=46471)
Imported an attachment (id=46472)
Imported an attachment (id=46473)

Unknown bug field "example" encountered while moving bug
   <example>2010-04-22 15:22:30</example>

Comment 1 Sebastian Sauer 2011-11-29 08:14:23 UTC
Support for filled radar charts in ODF and Microsoft 2000/2003/2007 documents was added with commit 5992551fa6b6bf4. The attached test-documents display as expected now. Please open new bug-reports for any additional documents that don't or that do not display 100% as expected. This bug-report was only about adding support for filled radar charts which is done now as can be confirmed with the 3 test-documents attached to this report.
Comment 2 keerthi 2011-12-09 05:37:36 UTC
Tested on fca6eaf7279acb92562ee4d4b7fb784554d58ac8.

radar chart is displaying properly.
Comment 3 keerthi 2011-12-09 05:38:41 UTC
Created attachment 66528 [details]
Screenshot with filled colors.