Implement support for filled radar charts.

This commit does;
1. implement support for filled radar charts in KDChart. The same patch was applied to KDChart master so the change is not lost when we sync later with a newer KDChart version.
2. implement support for reading, writing and editing of filled radar charts in the charting plugin.
3. implement support for reading filled radar chart from Microsoft 2000/2003/2007 documents and producing proper ODF for filled radar charts out of it which is then passed on to the charting plugin.

BUG:239584